Delete node from context and delete context implementations.